--- a/client/package.json
+++ b/client/package.json
@@ -27,9 +27,12 @@
         "eslint-loader": "^4.0.2",
         "eslint-plugin-react": "^7.20.5",
         "html-webpack-plugin": "^4.3.0",
+        "mini-css-extract-plugin": "^0.9.0",
+        "optimize-css-assets-webpack-plugin": "^5.0.3",
         "sass": "^1.26.10",
         "sass-loader": "^9.0.2",
         "style-loader": "^1.2.1",
+        "terser-webpack-plugin": "^3.1.0",
         "ts-loader": "^8.0.2",
         "typescript": "^3.9.7",
         "webpack": "^4.44.1",
