--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,14 @@
     "author": "Agnes K. Rivers",
     "license": "ISC",
     "dependencies": {
+        "@types/websocket": "^1.0.1",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-router-dom": "^5.2.0",
         "websocket": "^1.0.31"
     },
     "devDependencies": {
+        "@svgr/webpack": "^5.4.0",
         "@types/react": "^16.9.44",
         "@types/react-dom": "^16.9.8",
         "@types/react-router-dom": "^5.1.5",
@@ -26,15 +28,18 @@
         "eslint": "^7.6.0",
         "eslint-loader": "^4.0.2",
         "eslint-plugin-react": "^7.20.5",
+        "file-loader": "^6.0.0",
         "html-webpack-plugin": "^4.3.0",
         "mini-css-extract-plugin": "^0.9.0",
         "optimize-css-assets-webpack-plugin": "^5.0.3",
         "sass": "^1.26.10",
         "sass-loader": "^9.0.2",
         "style-loader": "^1.2.1",
+        "svg-react-loader": "^0.4.6",
         "terser-webpack-plugin": "^3.1.0",
         "ts-loader": "^8.0.2",
         "typescript": "^3.9.7",
+        "url-loader": "^4.1.0",
         "webpack": "^4.44.1",
         "webpack-cli": "^3.3.12",
         "webpack-dev-server": "^3.11.0"
