--- a/server/package.json
+++ b/server/package.json
@@ -14,10 +14,12 @@
         "@types/cors": "^2.8.7",
         "bcrypt": "^5.0.0",
         "body-parser": "^1.19.0",
+        "cloudinary": "^1.22.0",
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
-        "mongoose": "^5.9.28"
+        "mongoose": "^5.9.28",
+        "ws": "^7.3.1"
     },
     "devDependencies": {
         "@types/bcrypt": "^3.0.0",
@@ -27,6 +29,7 @@
         "@types/jsonwebtoken": "^8.5.0",
         "@types/mongoose": "^5.7.36",
         "@types/node": "^14.0.27",
+        "@types/ws": "^7.2.6",
         "eslint": "^7.6.0",
         "nodemon": "^2.0.4",
         "ts-node": "^8.10.2",
