--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "webpack-dev-server --open",
-        "build": "webpacl --mode=production"
+        "build": "webpack --mode=production"
     },
     "author": "Agnes K. Rivers",
     "license": "ISC",
