--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,6 @@
     "author": "Agnes K. Rivers",
     "license": "ISC",
     "dependencies": {
-        "@types/cors": "^2.8.7",
         "bcrypt": "^5.0.0",
         "body-parser": "^1.19.0",
         "cloudinary": "^1.22.0",
@@ -19,15 +18,18 @@
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.9.28",
+        "multer": "^1.4.2",
         "ws": "^7.3.1"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.7",
         "@types/bcrypt": "^3.0.0",
         "@types/body-parser": "^1.19.0",
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.7",
         "@types/jsonwebtoken": "^8.5.0",
         "@types/mongoose": "^5.7.36",
+        "@types/multer": "^1.4.4",
         "@types/node": "^14.0.27",
         "@types/ws": "^7.2.6",
         "eslint": "^7.6.0",
